<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="START">start</string>
    <string name="tap_to_continue">Tap to Continue</string>
    <string name="security">Security</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="log_out">Log Out</string>
    <string name="about_app">About app</string>
    <string name="about_org">About organisation</string>
    <string name="version">Version</string>
    <string name="separator">@null</string>
    <string name="feedback">Feedback</string>
    <string name="rate_app">Rate app</string>
    <string name="tell_others">Share</string>
    <string name="terms_of_use_info">Bu dasturdan foydalanish uchun bizning bir necha shartlarimizga rozilik bildirishingiz lozim. Ulardan birinchisi bizga berilgan ma\'lumotlarni saqlash va qayta ishlashga ruxsat talab etiladi. Keyingisi bu ma\'lumotlar kerak vaqtda 3-tomon foydalanuvchilariga reklama asosida sotish imkoni mavjudligidir. Agar bizning barcha qoidalarga rozi bo\'lsangiz dasturdan foydalanishingiz mumkin.</string>
    <string name="terms_of_use_title">Term off use</string>
    <string name="yes">Yes</string>
    <string name="log_out_message">Siz rostan ham profildan chiqishni hohlaysizmi?</string>
    <string name="cancel">Cancel</string>
    <string name="index">Index</string>
    <string name="description">Description</string>
    <string name="c1_s1_title">Fundamnetal malumotlar</string>
    <string name="my_taxi">MyTaxi</string>
    <string name="history">Мои поездки</string>
    <string name="pay_info">Способы оплаты</string>
    <string name="favorite_addresses">Избранные адреса</string>
    <string name="zafarbek_ntoshtemirov">Zafarbek \nToshtemirov</string>
    <string name="phone_number">+99899 3270758</string>
    <string name="ride_history">Ride History</string>
    <string-array name="setting">
        <item>@string/about_app</item>
        <item>@string/about_org</item>
        <item>@string/version</item>
        <item>@null</item>
        <item>@string/feedback</item>
        <item>@string/rate_app</item>
        <item>@string/terms_of_use_title</item>
        <item>@string/tell_others</item>
    </string-array>
</resources>