<?xml version="1.0" encoding="utf-8"?>
<uz.zafarbek.core.utils.DrawerContent xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/bg_drawer"
    app:layoutDescription="@xml/layout_drawer1_scene">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="@dimen/news_image_height"
        android:layout_height="@dimen/news_image_height"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_course_item"
        android:scaleType="centerCrop"
        app:layout_constraintRight_toLeftOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView"
        app:shapeAppearanceOverlay="@style/HalfCircleCorneredImageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/zafarbek_ntoshtemirov"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.5"
        android:typeface="serif"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@id/image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="@dimen/padding_10"
        android:drawableStart="@drawable/ic_direction"
        android:text="@string/history"
        android:textColor="@color/white"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pay_info"
        android:textColor="#FFF"
        android:drawablePadding="@dimen/padding_10"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:drawableStartCompat="@drawable/ic_wallet" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/favorite_addresses"
        android:drawablePadding="@dimen/padding_10"
        android:textColor="#FFF"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:drawableStartCompat="@drawable/ic_half_start" />

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#c2c1c1"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textColor="#FFF"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</uz.zafarbek.core.utils.DrawerContent>