<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image"
        android:layout_width="@dimen/profile_image_size"
        android:layout_height="@dimen/profile_image_size"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="50dp"
        android:background="@drawable/default_person"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/HalfCircleCorneredImageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/padding_10"
        android:text="Zafarjon Toshtemirov"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_20"
        android:text="zafarjon@gmail.com"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@color/grey_4001" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/settings"
        android:drawablePadding="@dimen/padding_10"
        android:padding="@dimen/padding_20"
        android:text="@string/settings"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"

        android:background="@color/grey_4001" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/share"
        android:drawablePadding="@dimen/padding_10"
        android:padding="@dimen/padding_20"
        android:text="@string/share"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        android:background="@color/grey_4001" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:drawableStart="@drawable/log_out"
        android:drawablePadding="@dimen/padding_10"
        android:padding="@dimen/padding_20"
        android:text="@string/log_out"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>